snapshot-tests/tests/snapshots/parser__stray_cr__single.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[Unexpected]: unexpected character found: `\r`
  ┌─ single:1:1
  │
1 │ 
  │ ^ unexpected character '\r'
